@@ -33,6 +33,9 @@ Commands:
    pennies. Use @cost <ancestor>=%0 to enable giving to all rooms/exits. [MG]
  * with/room can now check for commands in the Master Room or your ZMR, and
    with can check for commands on your ZMT. [MG]
+   
+Functions:
+ * remit() now works like @remit/list. Suggested by Minion. [MG]
 
 Fixes:
  * Help fixes.
